--- a/styles/index.css
+++ b/styles/index.css
@@ -176,7 +176,36 @@ main {
     color: #757575;
 }
 
-.download-cv{
+.download-cv {
     text-align: center;
     margin-top: 20px;
+}
+
+/* footer styles */
+footer {
+    display: flex;
+    gap: 100px;
+    background: #FFF8F3;
+    margin-top: 100px;
+    padding: 100px 200px;
+}
+
+.footer-column {
+    width: 50%;
+}
+.social-links a{
+    margin-right: 20px;
+}
+
+.contact-form input[type="text"],
+input[type="email"],
+textarea {
+    display: block;
+    margin-bottom: 20px;
+    padding: 18px 30px;
+    color: #757575;
+    border-radius: 5px;
+    background: #FFF;
+    border: 0;
+    width: 100%;
 }
